[gd_scene load_steps=17 format=2]

[ext_resource path="res://material_layers/material_layer_tree.gd" type="Script" id=1]
[ext_resource path="res://addons/arrangable_tree/arrangable_tree.tscn" type="PackedScene" id=2]
[ext_resource path="res://texture_layers/texture_layer_tree.gd" type="Script" id=3]
[ext_resource path="res://addons/property_panel/property_panel.tscn" type="PackedScene" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://texture_layers/texture_creation_dialog.gd" type="Script" id=6]
[ext_resource path="res://material_layers/material_layer_panel.gd" type="Script" id=7]
[ext_resource path="res://addons/blending/texture_blending_viewport.tscn" type="PackedScene" id=8]
[ext_resource path="res://material_layers/material_layer_property_panel.gd" type="Script" id=9]
[ext_resource path="res://material_layers/texture_channel_buttons/texture_channel_buttons.tscn" type="PackedScene" id=10]
[ext_resource path="res://3d_viewport/rotating_camera/rotating_camera.tscn" type="PackedScene" id=11]
[ext_resource path="res://3d_viewport/environment/environment.tres" type="Environment" id=12]
[ext_resource path="res://material_layers/masked_texture_blending_viewport/masked_texture_blending_viewport.tscn" type="PackedScene" id=13]
[ext_resource path="res://texture_layers/texture_layer_panel.gd" type="Script" id=14]
[ext_resource path="res://3d_viewport/cube.obj" type="ArrayMesh" id=15]
[ext_resource path="res://3d_viewport/spatialmaterial.tres" type="Material" id=16]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopButtonBar" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileMenuButton" type="MenuButton" parent="VBoxContainer/TopButtonBar"]
margin_right = 35.0
margin_bottom = 20.0
text = "File"
items = [ "New", null, 0, false, false, 0, 0, null, "", false, "Open", null, 0, false, false, 1, 0, null, "", false, "Save", null, 0, false, false, 2, 0, null, "", false ]
switch_on_hover = true

[node name="EditMenuButton" type="MenuButton" parent="VBoxContainer/TopButtonBar"]
margin_left = 39.0
margin_right = 75.0
margin_bottom = 20.0
text = "Edit"
switch_on_hover = true

[node name="ViewMenuButton" type="MenuButton" parent="VBoxContainer/TopButtonBar"]
margin_left = 79.0
margin_right = 121.0
margin_bottom = 20.0
text = "View"
switch_on_hover = true

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LayerContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 569.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResultTextureRect" type="TextureRect" parent="VBoxContainer/PanelContainer/LayerContainer"]
visible = false
margin_right = 315.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="3DViewport" type="ViewportContainer" parent="VBoxContainer/PanelContainer/LayerContainer"]
margin_right = 463.0
margin_bottom = 562.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport" type="Viewport" parent="VBoxContainer/PanelContainer/LayerContainer/3DViewport"]
size = Vector2( 463, 562 )
handle_input_locally = false
render_target_update_mode = 3

[node name="RotatingCamera" parent="VBoxContainer/PanelContainer/LayerContainer/3DViewport/Viewport" instance=ExtResource( 11 )]

[node name="Model" type="MeshInstance" parent="VBoxContainer/PanelContainer/LayerContainer/3DViewport/Viewport"]
mesh = ExtResource( 15 )
material/0 = ExtResource( 16 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="VBoxContainer/PanelContainer/LayerContainer/3DViewport/Viewport"]
environment = ExtResource( 12 )

[node name="DirectionalLight" type="DirectionalLight" parent="VBoxContainer/PanelContainer/LayerContainer/3DViewport/Viewport"]
transform = Transform( 0.788462, -0.446122, 0.423442, 0, 0.68843, 0.725302, -0.615084, -0.571873, 0.542801, 0, 3.22287, 0 )

[node name="MaterialLayerPanel" type="VBoxContainer" parent="VBoxContainer/PanelContainer/LayerContainer"]
margin_left = 467.0
margin_right = 736.0
margin_bottom = 562.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.58
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddMaterialLayerButton" type="Button" parent="VBoxContainer/PanelContainer/LayerContainer/MaterialLayerPanel"]
margin_right = 269.0
margin_bottom = 20.0
text = "Add Material Layer"

[node name="MaterialLayerTree" parent="VBoxContainer/PanelContainer/LayerContainer/MaterialLayerPanel" instance=ExtResource( 2 )]
margin_right = 269.0
margin_bottom = 289.0
script = ExtResource( 1 )

[node name="TextureChannelButtons" parent="VBoxContainer/PanelContainer/LayerContainer/MaterialLayerPanel" instance=ExtResource( 10 )]
margin_top = 293.0
margin_right = 269.0
margin_bottom = 293.0

[node name="MaterialLayerPropertyPanel" parent="VBoxContainer/PanelContainer/LayerContainer/MaterialLayerPanel" instance=ExtResource( 4 )]
margin_top = 297.0
margin_right = 269.0
margin_bottom = 562.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 9 )

[node name="TextureLayerPanel" type="VBoxContainer" parent="VBoxContainer/PanelContainer/LayerContainer"]
margin_left = 740.0
margin_right = 1010.0
margin_bottom = 562.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.58
script = ExtResource( 14 )

[node name="AddTextureLayerButton" type="Button" parent="VBoxContainer/PanelContainer/LayerContainer/TextureLayerPanel"]
margin_right = 270.0
margin_bottom = 20.0
text = "Add Texture Layer"

[node name="TextureLayerTree" parent="VBoxContainer/PanelContainer/LayerContainer/TextureLayerPanel" instance=ExtResource( 2 )]
margin_right = 270.0
margin_bottom = 291.0
script = ExtResource( 3 )

[node name="TextureLayerPropertyPanel" parent="VBoxContainer/PanelContainer/LayerContainer/TextureLayerPanel" instance=ExtResource( 4 )]
margin_top = 295.0
margin_right = 270.0
margin_bottom = 562.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureCreationDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -244.0
margin_top = -199.0
margin_right = 244.0
margin_bottom = 199.0
script = ExtResource( 6 )

[node name="TextureTypeList" type="ItemList" parent="TextureCreationDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -236.0
margin_top = -191.0
margin_right = 236.0
margin_bottom = 163.0
items = [ "Bitmap", ExtResource( 5 ), false, "Paint", ExtResource( 5 ), false, "Noise", ExtResource( 5 ), false, "Color", ExtResource( 5 ), false, "Scalar", ExtResource( 5 ), false ]
max_columns = 2
same_column_width = true
icon_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureBlendingViewport" parent="." instance=ExtResource( 8 )]
size = Vector2( 1024, 1024 )

[node name="MaskedTextureBlendingViewport" parent="." instance=ExtResource( 13 )]
size = Vector2( 1024, 1024 )
own_world = false
world = null
[connection signal="pressed" from="VBoxContainer/PanelContainer/LayerContainer/MaterialLayerPanel/AddMaterialLayerButton" to="VBoxContainer/PanelContainer/LayerContainer/MaterialLayerPanel" method="_on_AddMaterialLayerButton_pressed"]
[connection signal="item_edited" from="VBoxContainer/PanelContainer/LayerContainer/MaterialLayerPanel/MaterialLayerTree" to="VBoxContainer/PanelContainer/LayerContainer/MaterialLayerPanel/MaterialLayerTree" method="_on_item_edited"]
[connection signal="item_selected" from="VBoxContainer/PanelContainer/LayerContainer/MaterialLayerPanel/MaterialLayerTree" to="VBoxContainer/PanelContainer/LayerContainer/MaterialLayerPanel/TextureChannelButtons" method="_on_MaterialLayerTree_item_selected"]
[connection signal="item_selected" from="VBoxContainer/PanelContainer/LayerContainer/MaterialLayerPanel/MaterialLayerTree" to="VBoxContainer/PanelContainer/LayerContainer/MaterialLayerPanel" method="_on_MaterialLayerTree_item_selected"]
[connection signal="nothing_selected" from="VBoxContainer/PanelContainer/LayerContainer/MaterialLayerPanel/MaterialLayerTree" to="VBoxContainer/PanelContainer/LayerContainer/MaterialLayerPanel" method="_on_MaterialLayerTree_nothing_selected"]
[connection signal="changed" from="VBoxContainer/PanelContainer/LayerContainer/MaterialLayerPanel/TextureChannelButtons" to="VBoxContainer/PanelContainer/LayerContainer/MaterialLayerPanel" method="_on_TextureChannelButtons_changed"]
[connection signal="values_changed" from="VBoxContainer/PanelContainer/LayerContainer/MaterialLayerPanel/MaterialLayerPropertyPanel" to="VBoxContainer/PanelContainer/LayerContainer/MaterialLayerPanel" method="_on_MaterialLayerPropertyPanel_values_changed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/LayerContainer/TextureLayerPanel/AddTextureLayerButton" to="TextureCreationDialog" method="_on_AddTextureLayerButton_pressed"]
[connection signal="item_edited" from="VBoxContainer/PanelContainer/LayerContainer/TextureLayerPanel/TextureLayerTree" to="VBoxContainer/PanelContainer/LayerContainer/TextureLayerPanel/TextureLayerTree" method="_on_item_edited"]
[connection signal="item_selected" from="VBoxContainer/PanelContainer/LayerContainer/TextureLayerPanel/TextureLayerTree" to="VBoxContainer/PanelContainer/LayerContainer/TextureLayerPanel" method="_on_TextureLayerTree_item_selected"]
[connection signal="nothing_selected" from="VBoxContainer/PanelContainer/LayerContainer/TextureLayerPanel/TextureLayerTree" to="VBoxContainer/PanelContainer/LayerContainer/TextureLayerPanel" method="_on_TextureLayerTree_nothing_selected"]
[connection signal="values_changed" from="VBoxContainer/PanelContainer/LayerContainer/TextureLayerPanel/TextureLayerPropertyPanel" to="VBoxContainer/PanelContainer/LayerContainer/TextureLayerPanel" method="_on_TextureLayerPropertyPanel_values_changed"]
[connection signal="values_changed" from="VBoxContainer/PanelContainer/LayerContainer/TextureLayerPanel/TextureLayerPropertyPanel" to="VBoxContainer/PanelContainer/LayerContainer/MaterialLayerPanel" method="_on_TextureLayerPropertyPanel_values_changed"]
[connection signal="confirmed" from="TextureCreationDialog" to="TextureCreationDialog" method="_on_confirmed"]
[connection signal="texture_creation_confirmed" from="TextureCreationDialog" to="VBoxContainer/PanelContainer/LayerContainer/TextureLayerPanel" method="_on_TextureCreationDialog_texture_creation_confirmed"]
[connection signal="item_activated" from="TextureCreationDialog/TextureTypeList" to="TextureCreationDialog" method="_on_TextureTypeList_item_activated"]
